tests/samples/negative/pointers/raw_pointer_index_write_requires_unsafe.ax
module raw_pointer_index_write_requires_unsafe;

fn as_mut_ptr(value: &mut i32) -> *mut i32 {
    return unsafe { ptrat<*mut i32>(ptraddr(value)) };
}

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *mut i32 = as_mut_ptr(&mut value);
    ptr[0] = 2;
    return value;
}
